# MyLanGame

./: CMakeLists.txt
src/: Events.hpp  main.cpp  screen.cpp  screen.hpp
src/game/: Game.cpp  Game.hpp  chess_piece.cpp  chess_piece.hpp
src/network/: server.cpp  server.hpp
